Fixed sections overlapping bug on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5005,7 +5005,7 @@ sup {
 	width: 90%;
 	margin: 0 auto;
 	max-width: 960px;
-	height:100vh;
+	min-height:100vh;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -5070,7 +5070,7 @@ body {
 }
 
 #education {
-	height:100vh;
+	min-height:100vh;
 	font-size: 120%;
 	margin: 0 auto;
 	background-color: #4d5158;
